add start_migration to cli
