# src/comodash_api_client_lowlevel/models/__init__.py
@@ -23,6 +23,7 @@ from comodash_api_client_lowlevel.models.load_commit import LoadCommit
 from comodash_api_client_lowlevel.models.load_id import LoadId
 from comodash_api_client_lowlevel.models.load_meta_data import LoadMetaData
 from comodash_api_client_lowlevel.models.load_meta_data_error_messages_inner import LoadMetaDataErrorMessagesInner
+from comodash_api_client_lowlevel.models.migration import Migration
 from comodash_api_client_lowlevel.models.query import Query
 from comodash_api_client_lowlevel.models.query_id import QueryId
 from comodash_api_client_lowlevel.models.query_result import QueryResult
